--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,23 @@
-[project]
+[tool.poetry]
 name = "dsl-research-assistant"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Niko Covic",email = "niko.covic@gmail.com"},
-    {name = "Gabrijel Radovcic"},
-    {name = "Luis Carratero Lopez"}
+    "Niko Covic <niko.covic@gmail.com>",
+    "Gabrijel Radovcic <gradovcic@ethz.ch>",
+    "Luis Carratero Lopez"
 ]
 readme = "README.md"
-requires-python = "<4.0,>=3.10"
-dependencies = [
-    "docling (>=2.28.1,<3.0.0)",
-    "smolagents (>=1.12.0,<2.0.0)"
-]
 
-[tool.poetry]
-packages = [{include = "dsl_research_assistant", from = "src"}]
+[tool.poetry.dependencies]
+python = ">=3.10,<4.0"
+docling = ">=2.28.1,<3.0.0"
+smolagents = ">=1.12.0,<2.0.0"
+llama-index = "^0.12.26"
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+tqdm = "^4.67.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
