--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python = ">=3.10,<4.0"
 docling = ">=2.28.1,<3.0.0"
 smolagents = ">=1.12.0,<2.0.0"
 llama-index = "^0.12.26"
+faiss-cpu = "^1.10.0"
+pyarrow = "^19.0.1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
