--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ llama-index = "^0.12.26"
 faiss-cpu = "^1.10.0"
 pyarrow = "^19.0.1"
 numpy = ">=1.24.4,<2.0.0"
+pyalex = "^0.18"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
