Added SemanticScholar metadata retrieval scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ faiss-cpu = "^1.10.0"
 pyarrow = "^19.0.1"
 numpy = ">=1.24.4,<2.0.0"
 pyalex = "^0.18"
+semanticscholar = "^0.10.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
