--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ readme = "README.md"
 requires-python = "<4.0,>=3.10"
 dependencies = [
     "docling (>=2.28.1,<3.0.0)",
-    "smolagents (>=1.12.0,<2.0.0)"
+    "smolagents (>=1.12.0,<2.0.0)",
+    "lexrank (>=0.1.0,<0.2.0)",
+    "rouge-score (>=0.1.2,<0.2.0)"
 ]
 
 [tool.poetry]
