--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "smolagents (>=1.12.0,<2.0.0)",
     "lexrank (>=0.1.0,<0.2.0)",
     "rouge-score (>=0.1.2,<0.2.0)",
-    "torch (>=2.7.0,<3.0.0)"
+    "torch (>=2.7.0,<3.0.0)",
+    "accelerate (>=1.6.0,<2.0.0)",
+    "bitsandbytes (>=0.45.5,<0.46.0)"
 ]
 
 [tool.poetry]
