--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ semanticscholar = "^0.10.0"
 snakeviz = "^2.2.2"
 faiss-cpu = "^1.11.0"
 rank-bm25 = "^0.2.2"
+pymilvus = "^2.5.8"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
