--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ snakeviz = "^2.2.2"
 faiss-cpu = "^1.11.0"
 rank-bm25 = "^0.2.2"
 pymilvus = "^2.5.8"
+matplotlib = "^3.10.3"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
