Predicted literature review with deepseek-r1:685B, computed Rouge and BertScore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "rouge-score (>=0.1.2,<0.2.0)",
     "torch (>=2.7.0,<3.0.0)",
     "accelerate (>=1.6.0,<2.0.0)",
-    "bitsandbytes (>=0.45.5,<0.46.0)"
+    "bitsandbytes (>=0.45.5,<0.46.0)",
+    "evaluate (==0.4.0)",
+    "bert-score (>=0.3.13,<0.4.0)"
 ]
 
 [tool.poetry]
