--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,19 +10,18 @@ authors = [
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-docling = ">=2.28.1,<3.0.0"
-smolagents = ">=1.12.0,<2.0.0"
-llama-index = "^0.12.26"
-pyarrow = "^19.0.1"
-numpy = ">=1.24.4,<2.0.0"
-pyalex = "^0.18"
-semanticscholar = "^0.10.0"
-snakeviz = "^2.2.2"
+python = ">=3.10,<3.11"
+numpy = "^2.2.5"
+pandas = "^2.2.3"
 faiss-cpu = "^1.11.0"
 rank-bm25 = "^0.2.2"
 pymilvus = "^2.5.8"
 matplotlib = "^3.10.3"
+pyalex = "^0.18"
+semanticscholar = "^0.10.0"
+transformers = "^4.51.3"
+torch = "^2.7.0"
+pyarrow = "^20.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
