--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ transformers = "^4.51.3"
 torch = "^2.7.0"
 pyarrow = "^20.0.0"
 faiss-cpu = "^1.11.0"
+tqdm = "^4.67.1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
