--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ torch = "^2.7.0"
 pyarrow = "^20.0.0"
 faiss-cpu = "^1.11.0"
 tqdm = "^4.67.1"
+scikit-learn = "^1.6.1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
