--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ docker/
 *.sif
 notes/
 milvus-docker/volumes/
-.DS_Storesrc/semantic_search/data_retrieval/retrieve_paper_metadata.out
+.DS_Store
+.vscode/
